feat: Search for statements Web App

--- a/SearchDeclarations/SearchDeclarations.csproj
+++ b/SearchDeclarations/SearchDeclarations.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Declaration.Core\Declaration.Core.csproj" />
+  </ItemGroup>
+
 </Project>
